force-app/main/default/objects/LicenseType__c/fields/NoticeofLicensureNotification__c.field-meta.xml
<CustomField>
    <fullName>NoticeofLicensureNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN111819-Created for PVL Sprint 2 Phase 1</description>
    <label>Notice of Licensure Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Notice of Licensure)</relationshipLabel>
    <relationshipName>License_Types7</relationshipName>
    <type>Lookup</type>
</CustomField>