force-app/main/default/objects/LicenseType__c/fields/NoticeofRejectionNotification__c.field-meta.xml
<CustomField>
    <fullName>NoticeofRejectionNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN111819-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This is the template used to generate the Notice of Rejection Letter.</inlineHelpText>
    <label>Notice of Rejection Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Notice of Rejection Notification)</relationshipLabel>
    <relationshipName>License_Types3</relationshipName>
    <type>Lookup</type>
</CustomField>