force-app/main/default/objects/LicenseType__c/fields/NumberOfDaysPriorToInsExpNotice__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysPriorToInsExpNotice__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Number Of Days Prior To Ins Exp Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>