force-app/main/default/objects/LicenseType__c/fields/NumberofDaysUntilAutoForfeiture__c.field-meta.xml
<CustomField>
    <fullName>NumberofDaysUntilAutoForfeiture__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <label>Number of Days Until Auto Forfeiture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>