force-app/main/default/objects/LicenseType__c/fields/NumberOfDaysUntilInsAutoForfeiture__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysUntilInsAutoForfeiture__c</fullName>
    <description>PacPoint-KN01142019-Created for PVL Phase 1 Sprint 3</description>
    <label>Number of Days Until Ins Auto Forfeiture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>