force-app/main/default/objects/LicenseType__c/fields/NumofDaysToAddressDependentNonRen__c.field-meta.xml
<CustomField>
    <fullName>NumofDaysToAddressDependentNonRen__c</fullName>
    <description>PacPoint-FT110519- Created for PVL phase 1</description>
    <label>Num of Days To Address Dependent Non-Ren</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>