force-app/main/default/objects/LicenseType__c/fields/NumofDaysToAddressDependentNonRes__c.field-meta.xml
<CustomField>
    <fullName>NumofDaysToAddressDependentNonRes__c</fullName>
    <description>PacPoint-FT110519- Created for PVL phase 1</description>
    <label>Num of Days To Address Dependent Non-Res</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>