force-app/main/default/objects/LicenseType__c/fields/OneWayDependency__c.field-meta.xml
<CustomField>
    <fullName>OneWayDependency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for all 1 way dependencies for LICN/RNEW/RSTR Applications</description>
    <label>One Way Dependency</label>
    <type>Checkbox</type>
</CustomField>