force-app/main/default/objects/LicenseType__c/fields/OnlineApplicationTemplate__c.field-meta.xml
<CustomField>
    <fullName>OnlineApplicationTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Application Template</label>
    <referenceTo>Application_Meta_Data__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>License_Types</relationshipName>
    <type>Lookup</type>
</CustomField>