force-app/main/default/objects/LicenseType__c/fields/OnlineRenewalCertificationText__c.field-meta.xml
<CustomField>
    <fullName>OnlineRenewalCertificationText__c</fullName>
    <inlineHelpText>This text will show up to Licensees on the Portal when Renewing their License.</inlineHelpText>
    <label>Online Renewal Certification Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>