force-app/main/default/objects/LicenseType__c/fields/OnlineRenewalCodes__c.field-meta.xml
<CustomField>
    <fullName>OnlineRenewalCodes__c</fullName>
    <description>PacPoint-KN082319-Created for PVL Phase 1</description>
    <inlineHelpText>Online Renewal Codes, this determines what Licensees can and cannot do online.</inlineHelpText>
    <label>Online Renewal Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B - Business Address Change</fullName>
            </value>
            <value>
                <fullName>M - Mailing Address Change</fullName>
            </value>
            <value>
                <fullName>R - Residence Address Change</fullName>
            </value>
            <value>
                <fullName>I - Current Insurance Required</fullName>
            </value>
            <value>
                <fullName>L - Late Renewal</fullName>
            </value>
            <value>
                <fullName>L012 - Late Renewal / 12 Months to Restore</fullName>
            </value>
            <value>
                <fullName>L021 - Late Renewal / 21 Months to Restore</fullName>
            </value>
            <value>
                <fullName>O - Ontime Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>