force-app/main/default/objects/LicenseType__c/fields/OnlineRenewalCopyDownload__c.field-meta.xml
<CustomField>
    <fullName>OnlineRenewalCopyDownload__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This button controls the online renewal copy download visibility</description>
    <inlineHelpText>Check this box if you want to enable &quot;Download Copy&quot; for myPVL portal</inlineHelpText>
    <label>Online Renewal Copy Download</label>
    <type>Checkbox</type>
</CustomField>