force-app/main/default/objects/LicenseType__c/fields/OnlineRenewalCopyTemplate__c.field-meta.xml
<CustomField>
    <fullName>OnlineRenewalCopyTemplate__c</fullName>
    <description>Used for the Online Renewal History information</description>
    <inlineHelpText>This document is used in the MyPVL portal for &quot;Online Renewal History&quot; and on the Application.</inlineHelpText>
    <label>Online Renewal Copy Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>