force-app/main/default/objects/LicenseType__c/fields/OtherRenewalRequirements1__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalRequirements1__c</fullName>
    <description>PacPoint-FT111919 - Created for PVL phase 1</description>
    <label>Other Renewal Requirements 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>