force-app/main/default/objects/LicenseType__c/fields/OtherRenewalRequirements2__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalRequirements2__c</fullName>
    <description>PacPoint FT111919 - Created for PVL</description>
    <label>Other Renewal Requirements 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>