force-app/main/default/objects/LicenseType__c/fields/PartialCERequirement__c.field-meta.xml
<CustomField>
    <fullName>PartialCERequirement__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>Indicates under what conditions Partial CE is required as opposed to All CE for Licenses Flagged for Audit.</inlineHelpText>
    <label>Partial CE Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No (All CE will be Required)</fullName>
            </value>
            <value>
                <fullName>Licensed in 1st half of Biennium Requires Partial CE (1SB)</fullName>
            </value>
            <value>
                <fullName>Licensed in the Current License Period Requires Partial CE (CUR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>