force-app/main/default/objects/LicenseType__c/fields/PDFName__c.field-meta.xml
<CustomField>
    <fullName>PDFName__c</fullName>
    <formula>CASE(SelectRenewalPostcard__c,&quot;Renewal Notification&quot;, IF(RenewalFormTemplateBulkRenewals__c == &quot;RenewalNotificationwPrinc&quot;, &quot;Renewal Notification w Princ&quot;, IF(RenewalFormTemplateBulkRenewals__c == &quot;RenewalNotificationwPrincIns&quot;, &quot;Renewal Notification w Princ &amp; INS&quot;, IF(RenewalFormTemplateBulkRenewals__c == &quot;RenewalNotificationwClasses&quot;, &quot;Renewal Notification w Classes&quot;, IF(RenewalFormTemplateBulkRenewals__c == &quot;RenewalNotificationwIns&quot;, &quot;Renewal Notification w INS&quot;, 
IF(RenewalFormTemplateBulkRenewals__c == &quot;RenewalNotification&quot;, &quot;Renewal Notification&quot;, &quot;&quot;))))), PostcardContent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Name</label>
    <type>Text</type>
</CustomField>