force-app/main/default/objects/LicenseType__c/fields/PostcardContent__c.field-meta.xml
<CustomField>
    <fullName>PostcardContent__c</fullName>
    <description>Formula to write the Renewal Postcard visualforce page. 
Pacificpoint 20200609AZ 00008824</description>
    <formula>CASE(SelectRenewalPostcard__c,&quot;Renewal Postcard&quot;,IF(BoardProgram__r.Name ==&quot;MOTOR VEHICLE INDUSTRY BOARD&quot;, &quot;MVIPostcard&quot;, IF(BoardProgram__r.Name ==&quot;BOARD OF NURSING&quot;, &quot;NursingPostcard&quot;, If(BoardProgram__r.Name== &quot;REAL ESTATE COMMISSION&quot;,&quot;REBPostcard&quot;, &quot;LicensePostcard&quot;))), 
&quot;Renewal Flyer&quot;, 
IF(BoardProgram__r.Name ==&quot;HAWAII MEDICAL BOARD ex. DOS&quot;, &quot;MedicalFlyer&quot;, IF(BoardProgram__r.Name ==&quot;CONTRACTORS LICENSE BOARD&quot;, &quot;DOSFlyer&quot;, If(Name== &quot;DOS&quot;,&quot;DOS-2020Flyer-Final&quot;, &quot;&quot;))),
&quot;Renewal Reminder&quot;, 
IF(BoardProgram__r.Name ==&quot;REAL ESTATE COMMISSION&quot;, &quot;REBReminder&quot;, IF(BoardProgram__r.Name ==&quot;BOARD OF NURSING&quot;, &quot;NursingReminder&quot;, If(BoardProgram__r.Name== &quot;HAWAII MEDICAL BOARD&quot;,&quot;MedicalReminder&quot;, IF(BoardProgram__r.Name ==&quot;CONTRACTORS LICENSE BOARD&quot;,&quot;CTReminder&quot;,IF(BoardProgram__r.Name ==&quot;MOTOR VEHICLE INDUSTRY BOARD&quot;,&quot;MVI Reminder&quot;,&quot;LicenseReminder&quot;))))),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcard Content</label>
    <type>Text</type>
</CustomField>