force-app/main/default/objects/LicenseType__c/fields/PreferredAddress__c.field-meta.xml
<CustomField>
    <fullName>PreferredAddress__c</fullName>
    <description>PacPoint-KN101719-Created for PVL Sprint 1 Phase 1</description>
    <label>Preferred Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Residence</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Dependent Mailing</fullName>
            </value>
            <value>
                <fullName>Dependent Business</fullName>
            </value>
            <value>
                <fullName>Dependent Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>