force-app/main/default/objects/LicenseType__c/fields/PreferredEmail__c.field-meta.xml
<CustomField>
    <fullName>PreferredEmail__c</fullName>
    <description>PacPoint-KN110519-Created for PVL Sprint 2 Phase 1</description>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>