force-app/main/default/objects/LicenseType__c/fields/PreviousFirstYear__c.field-meta.xml
<CustomField>
    <fullName>PreviousFirstYear__c</fullName>
    <formula>(ADDMONTHS( PreviousFirstYearStart__c , 12 ))- 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous First Year End</label>
    <type>Date</type>
</CustomField>