force-app/main/default/objects/LicenseType__c/fields/PreviousFirstYearStart__c.field-meta.xml
<CustomField>
    <fullName>PreviousFirstYearStart__c</fullName>
    <formula>PreviousLicensePeriodEffectiveDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous First Year Start</label>
    <type>Date</type>
</CustomField>