force-app/main/default/objects/LicenseType__c/fields/PreviousLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>PreviousLicensePeriod__c</fullName>
    <formula>TEXT(MONTH( LicenseTypeEffectiveDate__c ))
+ &quot;/&quot;
+ TEXT(DAY( LicenseTypeEffectiveDate__c ))
+ &quot;/&quot;
+ TEXT(YEAR( LicenseTypeEffectiveDate__c ))
+ &quot; - &quot;
+ TEXT(MONTH( LicenseTypeExpireDate__c ))
+ &quot;/&quot;
+ TEXT(DAY( LicenseTypeExpireDate__c ))
+ &quot;/&quot;
+ TEXT(YEAR( LicenseTypeExpireDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous License Period</label>
    <type>Text</type>
</CustomField>