force-app/main/default/objects/LicenseType__c/fields/PreviousLicensePeriodEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousLicensePeriodEffectiveDate__c</fullName>
    <label>Previous License Period Effective Date</label>
    <type>Date</type>
</CustomField>