force-app/main/default/objects/LicenseType__c/fields/PreviousLicensePeriodExpireDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousLicensePeriodExpireDate__c</fullName>
    <label>Previous License Period Expire Date</label>
    <type>Date</type>
</CustomField>