force-app/main/default/objects/LicenseType__c/fields/PreviousPeriodCoreCERequirement__c.field-meta.xml
<CustomField>
    <fullName>PreviousPeriodCoreCERequirement__c</fullName>
    <label>Previous Period Core CE Requirement</label>
    <summarizedField>LicensePeriod__c.RequiredCoreCE__c</summarizedField>
    <summaryFilterItems>
        <field>LicensePeriod__c.Status__c</field>
        <operation>equals</operation>
        <value>Previous License Period</value>
    </summaryFilterItems>
    <summaryForeignKey>LicensePeriod__c.LicenseType__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>