force-app/main/default/objects/LicenseType__c/fields/PreviousPeriodElectiveCERequirement__c.field-meta.xml
<CustomField>
    <fullName>PreviousPeriodElectiveCERequirement__c</fullName>
    <label>Previous Period Elective CE Requirement</label>
    <summarizedField>LicensePeriod__c.RequiredElectiveCE__c</summarizedField>
    <summaryFilterItems>
        <field>LicensePeriod__c.Status__c</field>
        <operation>equals</operation>
        <value>Previous License Period</value>
    </summaryFilterItems>
    <summaryForeignKey>LicensePeriod__c.LicenseType__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>