force-app/main/default/objects/LicenseType__c/fields/PreviousRestorationDeadline__c.field-meta.xml
<CustomField>
    <fullName>PreviousRestorationDeadline__c</fullName>
    <formula>ADDMONTHS(PreviousLicensePeriodExpireDate__c, DurationofRestorationInMonths__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Restoration Deadline</label>
    <type>Date</type>
</CustomField>