force-app/main/default/objects/LicenseType__c/fields/PreviousSecondYearEnd__c.field-meta.xml
<CustomField>
    <fullName>PreviousSecondYearEnd__c</fullName>
    <formula>IF( DurationofLicenseInMonths__c &gt; 12,
(ADDMONTHS( PreviousFirstYearStart__c , 24 ))- 1 ,
NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Second Year End</label>
    <type>Date</type>
</CustomField>