force-app/main/default/objects/LicenseType__c/fields/PreviousSecondYearStart__c.field-meta.xml
<CustomField>
    <fullName>PreviousSecondYearStart__c</fullName>
    <formula>IF( DurationofLicenseInMonths__c &gt; 12,
ADDMONTHS( PreviousFirstYearStart__c , 12 ) ,
NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Second Year Start</label>
    <type>Date</type>
</CustomField>