force-app/main/default/objects/LicenseType__c/fields/PreviousThirdYearEnd__c.field-meta.xml
<CustomField>
    <fullName>PreviousThirdYearEnd__c</fullName>
    <formula>IF( DurationofLicenseInMonths__c &gt; 24,
(ADDMONTHS( PreviousFirstYearStart__c , (DurationofLicenseInMonths__c) ))- 1 ,
NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Third Year End</label>
    <type>Date</type>
</CustomField>