force-app/main/default/objects/LicenseType__c/fields/PreviousThirdYearStart__c.field-meta.xml
<CustomField>
    <fullName>PreviousThirdYearStart__c</fullName>
    <formula>IF( DurationofLicenseInMonths__c &gt; 24,
ADDMONTHS( PreviousFirstYearStart__c , 24 ) ,
NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Third Year Start</label>
    <type>Date</type>
</CustomField>