force-app/main/default/objects/LicenseType__c/fields/PrivilegeRenewalNotice__c.field-meta.xml
<CustomField>
    <fullName>PrivilegeRenewalNotice__c</fullName>
    <inlineHelpText>This restricts which licenses will get renewal forms.  Only licenses with this Privilege will get renewal forms generated.  Leave blank if you do not want to restrict by Privilege.</inlineHelpText>
    <label>Privilege (Renewal Notice)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 - Parenteral Therapy &amp; Minor Office Procedures</fullName>
            </value>
            <value>
                <fullName>A - Deep Sedation or General Anesthesia</fullName>
            </value>
            <value>
                <fullName>B - Moderate Sedation</fullName>
            </value>
            <value>
                <fullName>C - Charter Tour Operator</fullName>
            </value>
            <value>
                <fullName>D - Diagnostic Pharmaceutical Agents</fullName>
            </value>
            <value>
                <fullName>E- Approved to Use Doctoral Title</fullName>
            </value>
            <value>
                <fullName>H - Home Study</fullName>
            </value>
            <value>
                <fullName>I - Infiltration</fullName>
            </value>
            <value>
                <fullName>L - Infiltration &amp; Block</fullName>
            </value>
            <value>
                <fullName>M - Minor office Procedures</fullName>
            </value>
            <value>
                <fullName>N - Parenteral Therapy</fullName>
            </value>
            <value>
                <fullName>P - Permit to Practice</fullName>
            </value>
            <value>
                <fullName>S - Clinical Social Worker</fullName>
            </value>
            <value>
                <fullName>T - Therapeutic Parenteral Agents</fullName>
            </value>
            <value>
                <fullName>U - Prescriptive Authority</fullName>
            </value>
            <value>
                <fullName>X - RX. Of Controlled Substances (Includes Non Controlled)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>