force-app/main/default/objects/LicenseType__c/fields/RB2SONotification__c.field-meta.xml
<CustomField>
    <fullName>RB2SONotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN10272020 - Created for PVL Sprint 7 Phase 1</description>
    <label>RB2SO Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (R2BSO Notification)</relationshipLabel>
    <relationshipName>License_TypesSDfV</relationshipName>
    <type>Lookup</type>
</CustomField>