force-app/main/default/objects/LicenseType__c/fields/RealEstateCertification__c.field-meta.xml
<CustomField>
    <fullName>RealEstateCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN10202020 - Created for PVL Sprint 6 Phase 1</description>
    <label>Real Estate Certification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Real Estate Certification)</relationshipLabel>
    <relationshipName>License_TypesQiTY</relationshipName>
    <type>Lookup</type>
</CustomField>