force-app/main/default/objects/LicenseType__c/fields/RELOCNotification__c.field-meta.xml
<CustomField>
    <fullName>RELOCNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPint 12052020 - Created for PVL Phase 1</description>
    <label>RELOC Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (RELOC Notification)</relationshipLabel>
    <relationshipName>License_TypesdtQS</relationshipName>
    <type>Lookup</type>
</CustomField>