force-app/main/default/objects/LicenseType__c/fields/RemedialCourseNotification__c.field-meta.xml
<CustomField>
    <fullName>RemedialCourseNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN07022020-Created for PVL Phase 1 Sprint 6</description>
    <label>Remedial Course Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Remedial Course Notification)</relationshipLabel>
    <relationshipName>License_Types0pKz</relationshipName>
    <type>Lookup</type>
</CustomField>