force-app/main/default/objects/LicenseType__c/fields/RenewalFee__c.field-meta.xml
<CustomField>
    <fullName>RenewalFee__c</fullName>
    <description>PacPoint-KN111919-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This field is used on Renewal Notifications and displays the total Renewal Amount for the corresponding License Type. This field will need to be manually updated before generating renewal notifications.</inlineHelpText>
    <label>Renewal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>