force-app/main/default/objects/LicenseType__c/fields/RenewalFeewPrivilege__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeewPrivilege__c</fullName>
    <inlineHelpText>If renewing with a privilege has a different fee, then enter the total amount to renew with a privilege.  If renewing with the privilege does not have a different fee, then leave this field blank.</inlineHelpText>
    <label>Renewal Fee w/ Privilege</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>