force-app/main/default/objects/LicenseType__c/fields/RenewalFormNotification__c.field-meta.xml
<CustomField>
    <fullName>RenewalFormNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN111819-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This indicates the Renewal Form Template that will be used to generate Renewal Forms for the License Type</inlineHelpText>
    <label>Renewal Form Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Renewal Form Notification)</relationshipLabel>
    <relationshipName>License_Types4</relationshipName>
    <type>Lookup</type>
</CustomField>