force-app/main/default/objects/LicenseType__c/fields/RenewalFormTemplateBulkRenewals__c.field-meta.xml
<CustomField>
    <fullName>RenewalFormTemplateBulkRenewals__c</fullName>
    <label>Renewal Form Template - Bulk Renewals</label>
    <length>100</length>
    <type>Text</type>
</CustomField>