force-app/main/default/objects/LicenseType__c/fields/RenewalFormTemplateMyPVL__c.field-meta.xml
<CustomField>
    <fullName>RenewalFormTemplateMyPVL__c</fullName>
    <label>Renewal Form Template - MyPVL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>