force-app/main/default/objects/LicenseType__c/fields/RenewalMailToCode__c.field-meta.xml
<CustomField>
    <fullName>RenewalMailToCode__c</fullName>
    <label>Renewal Mail To Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>* - Special Program for unique situations</fullName>
            </value>
            <value>
                <fullName>B - Business Mailing/Business/Residence</fullName>
            </value>
            <value>
                <fullName>R - Residence Mailing/Residence</fullName>
            </value>
            <value>
                <fullName>E - Employer If licensee is inactive, licensee’s Mailing/Residence. Otherwise, c/o Employer’s Mailing/Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>