force-app/main/default/objects/LicenseType__c/fields/RenewalNoticeMethod__c.field-meta.xml
<CustomField>
    <fullName>RenewalNoticeMethod__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>Renewal Notice Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Notice</fullName>
            </value>
            <value>
                <fullName>Post Card</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>