force-app/main/default/objects/LicenseType__c/fields/RenewalPostcardNotification__c.field-meta.xml
<CustomField>
    <fullName>RenewalPostcardNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN02122020-Created for PVL Phase 1 Sprint 3</description>
    <label>Renewal Postcard Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Renewal Postcard Notification)</relationshipLabel>
    <relationshipName>License_TypesbVAS</relationshipName>
    <type>Lookup</type>
</CustomField>