force-app/main/default/objects/LicenseType__c/fields/RenewalRefundNoticeTemplate__c.field-meta.xml
<CustomField>
    <fullName>RenewalRefundNoticeTemplate__c</fullName>
    <label>Renewal Refund Notice Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>