force-app/main/default/objects/LicenseType__c/fields/RenewalReminderEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>RenewalReminderEmailTemplate__c</fullName>
    <formula>IF(
    AND(EligibleforOnlineRenewal__c = true,AbleToInactivate__c = true, BoardProgram__r.Name &lt;&gt; &quot;CONTRACTORS LICENSE BOARD&quot;, BoardProgram__r.Name &lt;&gt; &quot;REAL ESTATE COMMISSION&quot;),
    &quot;Renewal_Email_Reminder_with_Inactive&quot;,
    IF(EligibleforOnlineRenewal__c = true,
    IF(
        BoardProgram__r.Name = &quot;CONTRACTORS LICENSE BOARD&quot;, 
        &quot;ContractorRenewalReminderEmail&quot;,
        IF(
            BoardProgram__r.Name = &quot;REAL ESTATE COMMISSION&quot;, 
            &quot;LicREBRenewalEmailReminderOnlineandHard&quot;,
            &quot;LicRenewalEmailReminderOnlineandHardcopy&quot;
        )
    ), 
    &quot;LicRenewalEmailReminderHardcopyOnly&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Reminder Email Template</label>
    <type>Text</type>
</CustomField>