force-app/main/default/objects/LicenseType__c/fields/RenewalSurvey__c.field-meta.xml
<CustomField>
    <fullName>RenewalSurvey__c</fullName>
    <label>Renewal Survey</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>