force-app/main/default/objects/LicenseType__c/fields/RenewalWindowInDays__c.field-meta.xml
<CustomField>
    <fullName>RenewalWindowInDays__c</fullName>
    <description>PacPoint-KN02032020 - Created for PVL Phase 1 Sprint 2</description>
    <label>Renewal Window (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>