force-app/main/default/objects/LicenseType__c/fields/RenewaRefundNoticeRespondByDate__c.field-meta.xml
<CustomField>
    <fullName>RenewaRefundNoticeRespondByDate__c</fullName>
    <description>For some license types, date used as “RESPOND BY DATE” in the renewal refund notices.</description>
    <label>Renewal Refund Notice Respond By Date</label>
    <type>Date</type>
</CustomField>