force-app/main/default/objects/LicenseType__c/fields/RequiresallEmployeestoRenew__c.field-meta.xml
<CustomField>
    <fullName>RequiresallEmployeestoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in the 1 way dependency renewal process</inlineHelpText>
    <label>Requires all Employees to Renew</label>
    <type>Checkbox</type>
</CustomField>