force-app/main/default/objects/LicenseType__c/fields/RequiresInsurance__c.field-meta.xml
<CustomField>
    <fullName>RequiresInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Requires Insurance</label>
    <type>Checkbox</type>
</CustomField>