force-app/main/default/objects/LicenseType__c/fields/ResetAudit__c.field-meta.xml
<CustomField>
    <fullName>ResetAudit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Audit?</label>
    <type>Checkbox</type>
</CustomField>