force-app/main/default/objects/LicenseType__c/fields/ResetLicenseType__c.field-meta.xml
<CustomField>
    <fullName>ResetLicenseType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to reset the license types 
00014196</description>
    <label>Reset License Type</label>
    <type>Checkbox</type>
</CustomField>