force-app/main/default/objects/LicenseType__c/fields/RestorationDeadline__c.field-meta.xml
<CustomField>
    <fullName>RestorationDeadline__c</fullName>
    <description>PacPoint-FT110519- Created for PVL phase 1</description>
    <formula>IF( ISNULL(DurationofRestorationInMonths__c), null, (ADDMONTHS( EndofRenewalPeriod__c , DurationofRestorationInMonths__c )))</formula>
    <label>Restoration Deadline</label>
    <type>Date</type>
</CustomField>