force-app/main/default/objects/LicenseType__c/fields/RestrictedCurrentLicense__c.field-meta.xml
<CustomField>
    <fullName>RestrictedCurrentLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN01152019-Created for PVL Phase 1 Sprint 3</description>
    <inlineHelpText>This field indicates that this License Type can not licensed if the Applicant has a Current License type indicated below.</inlineHelpText>
    <label>Restricted Current License</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>License Types (Restricted Current License)</relationshipLabel>
    <relationshipName>License_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>