force-app/main/default/objects/LicenseType__c/fields/RestrictmorethanonelicenseperAccnt__c.field-meta.xml
<CustomField>
    <fullName>RestrictmorethanonelicenseperAccnt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV102219 - Created for PVL phase 1</description>
    <inlineHelpText>Restricts the ability to create more than one license per Account when creating Applications via the wizard.</inlineHelpText>
    <label>Restrict more than one license per Accnt</label>
    <type>Checkbox</type>
</CustomField>