force-app/main/default/objects/LicenseType__c/fields/RMELosesEmployerDuetoInsurance__c.field-meta.xml
<CustomField>
    <fullName>RMELosesEmployerDuetoInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JF 4/12/23 - Created for Case 24075</description>
    <label>RME Loses Employer Due to Insurance</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (RME Loses Employer Due to Insurance)</relationshipLabel>
    <relationshipName>License_Types9hvc</relationshipName>
    <type>Lookup</type>
</CustomField>