force-app/main/default/objects/LicenseType__c/fields/RMELosesEntityNotification__c.field-meta.xml
<CustomField>
    <fullName>RMELosesEntityNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN03162020-Created for PVL Phase 1 Sprint 3</description>
    <label>RME Loses Entity Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (RME Loses Entity Notification)</relationshipLabel>
    <relationshipName>License_TypeskdLm</relationshipName>
    <type>Lookup</type>
</CustomField>