force-app/main/default/objects/LicenseType__c/fields/RollingLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>RollingLicensePeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint- KN111419-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>Check this checkbox if the License Type has a rolling license period based on effective license date.</inlineHelpText>
    <label>Rolling License Period</label>
    <type>Checkbox</type>
</CustomField>