force-app/main/default/objects/LicenseType__c/fields/RunBatchUpdateToLicense__c.field-meta.xml
<CustomField>
    <fullName>RunBatchUpdateToLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AZ011920 - Created for PVL phase 1</description>
    <label>Run Batch Update To License</label>
    <type>Checkbox</type>
</CustomField>